<resources>
    <string name="app_name">Small bites</string>
    <string name="login">Log In</string>
    <string name="Email">Email Address</string>
    <string name="password">Password</string>
    <string name="forget">Forget Password</string>
    <string name="donot">Don’t have an Account?</string>
    <string name="here">Register here!</string>
    <string name="register">Register</string>
    <string name="cpassword">Confirm password</string>
    <string name="already">Already Registered?</string>
    <string name="back">Back To Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard">Dashboard</string>
    <string name="search">Search</string>
    <string name="addcart">AddCart</string>
    <string name="location">Location</string>
    <string name="rajkot_gujrat">Rajkot,Gujrat</string>
    <string name="pizza">Pizza</string>
    <string name="fast_food">Fast Food</string>
    <string name="punjabi">Punjabi</string>
    <string name="chinese">Chinese</string>
    <string name="south_indian">South Indian</string>
    <string name="search_here">Search here</string>
    <string name="moblie_no">Moblie No</string>
    <string name="cheese_pizza">Cheese Pizza</string>
    <string name="veggie_pizza">Veggie Pizza</string>
    <string name="margherita_pizza">Margherita Pizza</string>
    <string name="pepperoni_pizza">Pepperoni Pizza</string>
    <string name="vada_pav">Vada Pav</string>
    <string name="dabeli">Dabeli</string>
    <string name="pav_bhaji">Pav Bhaji</string>
    <string name="momos">Momos</string>
    <string name="chapati">Chapati</string>
    <string name="undheeyu">Undheeyu</string>
    <string name="kaju_gathiya">Kaju Gathiya</string>
    <string name="mung_sabji">Mung Sabji</string>
    <string name="paneer_tikka">Paneer Tikka</string>
    <string name="naan">Naan</string>
    <string name="kaju_curry">Kaju Curry</string>
    <string name="veg_kadai">Veg Kadai</string>
    <string name="dosa">Dosa</string>
    <string name="coconut_rice">Coconut Rice</string>
    <string name="pesarattu">Pesarattu</string>
    <string name="idly_sambhar">Idly Sambhar</string>
    <string name="spring_rolls">Spring Rolls</string>
    <string name="schezwan_noodles">Schezwan Noodles</string>
    <string name="veg_manchuria">Veg manchuria</string>
    <string name="veg_manchow_soup">Veg Manchow Soup</string>
</resources>