<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/foodbjk"
    android:orientation="vertical"
    tools:context=".Register">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/foodlogo"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            app:cardElevation="5dp"
            app:cardCornerRadius="25dp"
            app:cardBackgroundColor="#4A4A55"
            app:cardUseCompatPadding="true"
            android:alpha="0.9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/register"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:textColor="#F1CCCC"
                    android:textSize="50dp"/>


                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:inputType="text"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/black"
                    android:drawableLeft="@drawable/email"
                    android:drawablePadding="10dp"
                    android:hint="@string/Email"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="20dp" />


                <EditText
                    android:id="@+id/moblieno"
                    android:drawableLeft="@drawable/ic_vector"
                    android:drawablePadding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/black"
                    android:hint="@string/moblie_no"
                    android:textColorHint="@color/white"
                    android:textSize="20dp"
                    android:textColor="@color/white"/>

                <EditText
                    android:id="@+id/password"
                    android:drawableLeft="@drawable/password"
                    android:drawablePadding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/black"
                    android:hint="@string/password"
                    android:textColorHint="@color/white"
                    android:textSize="20dp"
                    android:textColor="@color/white"/>

                <EditText
                    android:id="@+id/cpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:inputType="textPassword"
                    android:backgroundTint="@color/black"
                    android:drawableLeft="@drawable/password"
                    android:drawablePadding="10dp"
                    android:hint="@string/cpassword"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="20dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/register"
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    app:cornerRadius="10dp"
                    android:text="@string/register"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                    android:backgroundTint="#AFB2C3" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/already"
                        android:layout_marginEnd="10dp"
                        android:textSize="20dp"
                        android:textColor="@color/white"/>
                    <TextView
                        android:id="@+id/login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="@string/login"
                        android:textSize="20dp"
                        android:textColor="#FFD600"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>