<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/deshboard"
    android:orientation="vertical"
    tools:context=".Fastfood">


    <com.google.android.material.card.MaterialCardView
        app:strokeColor="@color/black"
        app:cardBackgroundColor="@color/white"
        app:strokeWidth="1dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:weightSum="3"
            android:gravity="center">
            <ImageView
                android:id="@+id/ic_back"
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/logout" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/flogo"/>
            </LinearLayout>
            <ImageView
                android:id="@+id/Profile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/user"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.cardview.widget.CardView

        android:id="@+id/vadapav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.9"
        android:layout_margin="15dp"
        app:cardCornerRadius="25dp"
        app:cardBackgroundColor="#4A4A55"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/vadapav"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vada_pav"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:textSize="30sp"
                android:textColor="#FFD600"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView

        android:id="@+id/dabeli"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.9"
        android:layout_margin="15dp"
        app:cardCornerRadius="25dp"
        app:cardBackgroundColor="#4A4A55"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/dabeli"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dabeli"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:textSize="30sp"
                android:textColor="#FFD600"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/pavbhaji"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.9"
        android:layout_margin="15dp"
        app:cardCornerRadius="25dp"
        app:cardBackgroundColor="#4A4A55"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/pavbhaji"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pav_bhaji"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:textSize="30sp"
                android:textColor="#FFD600"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/momos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.9"
        android:layout_margin="15dp"
        app:cardCornerRadius="25dp"
        app:cardBackgroundColor="#4A4A55"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/momos"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/momos"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:textSize="30sp"
                android:textColor="#FFD600"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/menu"
            android:background="@color/white"
            android:layout_alignParentBottom="true"
            app:itemIconTint="@drawable/text_color"
            app:itemTextColor="@drawable/text_color"/>
    </RelativeLayout>

</LinearLayout>